--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "path": "^0.12.7",
     "pg": "^7.11.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^8.1.0",
     "typeorm": "^0.2.17",
     "typescript": "^3.4.5",
     "verror": "^1.10.0",
