--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {    
   "APP_PORT": "3000",
   "DB_TYPE": "postgres",
-  "DB_HOST": "localhost",
+  "DB_HOST": "postgres",
   "DB_PORT": 25432,
   "DB_USERNAME": "feedms",
   "DB_PASSWORD": "yiuPh9eipiu2la9ie8gaifee",
