--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,10 @@ version: '2'
 
 services:
   postgres:
-    image: mdillon/postgis:10-alpine
-    container_name: feedMsPostgres
-    ports:
-      - '25432:5432'
+    image: mdillon/postgis:10-alpine       
     environment:
-      - POSTGRES_USER=feedms
+      - POSTGRES_USER=moana
       - POSTGRES_PASSWORD=yiuPh9eipiu2la9ie8gaifee
-      - POSTGRES_DB=feedms
-    volumes:
-      - 'postgres_data:/var/lib/postgresql'
-
-volumes:
-  postgres_data:
+      - POSTGRES_DB=moana
+    ports:
+      - '25432:5432'  
