--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "APP_PORT": "3000",
   "DB_TYPE": "postgres",
   "DB_HOST": "localhost",
+  "DB_PORT": 25432,
   "DB_USERNAME": "moana",
   "DB_PASSWORD": "yiuPh9eipiu2la9ie8gaifee",
   "DB_DATABASE": "moana"
