--- a/config.json
+++ b/config.json
@@ -1,8 +1,4 @@
 {    
   "APP_PORT": "3000",
-  "DB_TYPE": "postgres",
-  "DB_HOST": "postgres",
-  "DB_USERNAME": "moana",
-  "DB_PASSWORD": "yiuPh9eipiu2la9ie8gaifee",
-  "DB_DATABASE": "moana"
+  "DB_TYPE": "postgres"
 }
