--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,26 @@
-version: '2'
+version: '3.3'
 
 services:
   postgres:
-    image: mdillon/postgis:10-alpine       
+    image: mdillon/postgis:10-alpine
     environment:
       - POSTGRES_USER=moana
       - POSTGRES_PASSWORD=yiuPh9eipiu2la9ie8gaifee
-      - POSTGRES_DB=moana
     ports:
-      - '25432:5432'  
+    - '5432:5432'
+
+  moana:
+    build: .
+    container_name: moana
+    ports:
+      - '3000:3000'
+    environment:
+      - DB_HOST=postgres
+      - DB_USERNAME=moana
+      - DB_PASSWORD=yiuPh9eipiu2la9ie8gaifee
+      - DB_DATABASE=moana
+      - WAIT_HOSTS= postgres:5432
+    links:
+      - postgres
+    depends_on:
+      - postgres   
