--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/nconf": "^0.10.0",
     "@types/node": "^12.0.2",
     "@types/verror": "^1.10.3",
+    "axios": "^0.19.0",
     "express": "^4.17.0",
     "express-validator": "^5.3.1",
     "morgan": "^1.9.1",
