--- a/config.json
+++ b/config.json
@@ -1,4 +1,8 @@
 {    
   "APP_PORT": "3000",
-  "DB_TYPE": "postgres"
+  "DB_TYPE": "postgres",  
+  "DB_HOST": "localhost",
+  "DB_USERNAME": "moana",
+  "DB_PASSWORD": "yiuPh9eipiu2la9ie8gaifee",
+  "DB_DATABASE": "moana"
 }
